--- a/profile.ejs
+++ b/profile.ejs
@@ -42,13 +42,19 @@
       h3,
       a {
         margin-left: 2%;
+        color: purple;
         text-decoration: none;
       }
+
+      a {
+        color: azure;
+      }
+
     </style>
   </head>
   <body>
     <div class="sidebar">
-      <h2><u>Profile</u> :</h2>
+      <h2><u>Menu</u> :</h2>
       <ul>
         <li><a href="/trial">Play the Game</a></li>
         <li><a href="/">Back to Home</a></li>
@@ -57,8 +63,8 @@
     </div>
 
     <div class="content">
-      <h1>Welcome <%= username %></h1>
-      <h3>Total user saat ini berjumlah : <%= totalUsers %> Users.</h3>
+      <h1>Welcome <%= user.username %></h1>
+    
     </div>
   </body>
 </html>
