--- a/dashboard.ejs
+++ b/dashboard.ejs
@@ -80,7 +80,7 @@
             border: 1px solid transparent;
         }
 
-        #popup {
+        .popup {
             width: 100%;
             height: 100%;
             position: fixed;
@@ -122,7 +122,7 @@
             right: -10px;	
         }
 
-        #popup:target {
+        .popup:target {
             visibility: visible;
         }
     </style>
@@ -160,25 +160,29 @@
                 <td scope="row"><%= user.user_game_biodatum.last_name %></td>
                 <td scope="row"><%= user.user_game_biodatum.birthplace %></td>
                 <td>
-                    <div id="btn-edit" ><a href="#popup">Edit  </a>
-                    <!-- <a href="/user/<%= user.id %>/update"></a> -->
-                    <!-- Saya belum sempat bikin page baru hehe.. -->
-                    </div>
-                    <div id="popup">
+                    <div class="popup" id="popup/<%= user.id %>">
                         <div class="window">
                             <a href="#" class="close-button" title="Close">X</a>
                             <h3>Isilah data berikut ini :</h3>
                             <br/>
                             <form method="post" action="/user/<%= user.id %>/edit">
+                                <label for="username">Username</label>&nbsp;
                                 <input type="text" id="editUsr" name="username" class="edit" value="<%= user.username %>">
+                                <label for="password">Password</label>&nbsp;
                                 <input type="text" id="editPsw" name="password" class="edit" value="<%= user.password %>">
+                                <label for="first_name">First Name</label>
                                 <input type="text" id="firstN" name="first_name" class="edit" value="<%= user.user_game_biodatum.first_name %>">
+                                <label for="last_name">Last Name</label>
                                 <input type="text" id="lastN" name="last_name" class="edit" value="<%= user.user_game_biodatum.last_name %>">
+                                <label for="birthplace">Birth Place</label>
                                 <input type="text" id="birthP" name="birthplace" class="edit" value="<%= user.user_game_biodatum.birthplace %>">
                                 <br/>
                                 <button onclick="saveUser()" type="submit" id="saveUsr" class="btn btn-success">Save</button> 
                             </form> 
                         </div>
+                    </div>
+                    <div id="btn-edit" >
+                        <a href="#popup/<%= user.id %>" >Edit  </a>
                     </div>
                     <div id="btn-delete" onclick="remove()"><a href="/user/<%= user.id %>/delete">Delete</a></div>
                 </td>
@@ -188,7 +192,6 @@
         </table>
         <br/>
     </div>
-
     <button onclick="addUser()" id="btn-add" class="btn btn-success"><h6>Add New User</h6></button>
     <br/>
     <div id="formAdd" class="container">
@@ -216,10 +219,9 @@
             <br/>
             <button type="submit" class="btn btn-danger">Submit</button>
             <button onclick="hide()" type="button" class="btn btn-secondary">Hide</button>
-          </form> 
-          <br/>
+        </form> 
+        <br/>
         </div>
-       
     </div>
    
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
