--- a/dashboard.ejs
+++ b/dashboard.ejs
@@ -40,14 +40,49 @@
             border-style: none;
         }
 
-        button#btn-add {
-            margin-left: 7%;
-            text-align: center;
+        .dashboard {
+            background-color: darkseagreen;
+            margin-top: 5% auto;
+            font-weight: bold;
         }
 
         a.btn {
-            margin-left: 7%;
+            width: 136px;
+            margin-left: 5%;
         }
+
+        #btn-bio {
+            margin-left: 5%;
+            display: none;
+        }
+
+        a#logout{
+            float: right;
+            margin-right: 5%;
+            padding-top: 5px;
+        }
+
+        #btn-hide {
+            width: 136px;
+            margin-left: 5%;
+            display: block;
+        }
+
+        #btn-hide2 {
+            width: 136px;
+            margin-left: 5%;
+            display: none;
+        }
+
+        #btn-add {
+            width: 136px;
+            margin-left: 5%;
+            text-align: center;
+        }
+
+        /* #biodata {
+            display: none;
+        } */
 
         div#formAdd {
             display: none;
@@ -131,12 +166,25 @@
 <body>
     
     <br/>
-    <a class="btn btn-secondary" href="/"><h6>Back to Home</h6></a>
-    <a class="btn btn-secondary" href="/trial"><h6>Play The Game</h6></a>
-    <a class="btn btn-secondary" href="/login"><h6>Log Out</h6></a>
+<h5>Welcome Admin,</h5>
+    <div class="dashboard">
+    <h2>&nbsp;<u>Dashboard</u>
+    <a class="btn btn-secondary" id="logout" href="/login"><h6>Log Out</h6></a>
+    </h2>
+    </div>
+    <br/>
+    <div class="btn-sidebar">
+    <a class="btn btn-success" href="/"><h6>Back to Home</h6></a>
     <br/>
     <br/>
-    <div class="container">
+    <a class="btn btn-success" href="/trial"><h6>Play The Game</h6></a>
+    <br/>
+    <br/>
+    <button onclick="bioUser()" id="btn-bio" class="btn btn-success"><h6>View Data User</h6></button>
+    <button onclick="hide()" id="btn-hide" class="btn btn-secondary"><h6>>> Hide Data</h6></button>
+    
+    <div id="biodata" class="container">
+        <br/>
         <h3>Biodata User :</h3>
         <table class="table">
             <thead class="table-primary">
@@ -190,9 +238,10 @@
                 <%}%>
             </tbody>
         </table>
-        <br/>
     </div>
+    <br/>
     <button onclick="addUser()" id="btn-add" class="btn btn-success"><h6>Add New User</h6></button>
+    <button onclick="hide2()" id="btn-hide2" class="btn btn-secondary"><h6>>> Hide Form</h6></button>
     <br/>
     <div id="formAdd" class="container">
         <form method="post" action="/add">
@@ -218,26 +267,38 @@
             </div>
             <br/>
             <button type="submit" class="btn btn-danger">Submit</button>
-            <button onclick="hide()" type="button" class="btn btn-secondary">Hide</button>
         </form> 
-        <br/>
         </div>
     </div>
-   
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 <script>
-    
+    function bioUser() {
+        document.getElementById("biodata").style.display = "block";
+        document.getElementById("btn-bio").style.display = "none";
+        document.getElementById("btn-hide").style.display = "block";
+    }
+
     function saveUser() {
-        document.getElementById("popup").style.display = "none";
+        document.getElementById("biodata").style.display = "block";
     }
 
     function addUser() {
         document.getElementById("formAdd").style.display = "block";
+        document.getElementById("btn-add").style.display = "none";
+        document.getElementById("btn-hide2").style.display = "block";
     }
     function hide() {
-        document.getElementById("formAdd").style.display = "none";
+        document.getElementById("biodata").style.display = "none";
+        document.getElementById("btn-hide").style.display = "none";
+        document.getElementById("btn-bio").style.display = "block";
     }
 
+    function hide2() {
+        document.getElementById("formAdd").style.display = "none";
+        document.getElementById("btn-hide2").style.display = "none";
+        document.getElementById("btn-add").style.display = "block";
+    }
 </script>
 </html>
