--- a/profile.ejs
+++ b/profile.ejs
@@ -7,7 +7,8 @@
     <title>Profile</title>
     <script src="index.js"></script>
     <script src="style.js"></script>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
     <style>
       body {
         background-image: url(assets/main-bg.jpg);
@@ -26,21 +27,26 @@
         margin-right: 5%;
         border: 5px solid purple;
         background-color: darkcyan;
+        opacity: 0.6;
       }
 
       div.content {
         width: 50%;
-        height: 300px;
-        background-color: cyan;
-        border: 5px solid purple;
+        height: 200%;
+        border: 5px solid aqua;
         margin-top: 5%;
         margin-left: 0%;
         display: inline-block;
       }
 
+      div.wlcm {
+        background-color: cyan;
+      }
+
       h1,
-      h3,
-      a {
+      h5,
+      a
+       {
         margin-left: 2%;
         color: purple;
         text-decoration: none;
@@ -48,23 +54,193 @@
 
       a {
         color: azure;
+       
       }
+
+      table {
+     
+        /* text-align: center; */
+        margin-left: 0%;
+        margin-right: 2%;
+      }
+
+      #btn-edit a {
+        color: white; 
+        background-color: red;
+        padding-left: 10px;
+        padding-right: 10px;
+      }
+
+      .popup {
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            background: rgba(0,0,0,.7);
+            top: 0;
+            left: 0;
+            z-index: 9999;
+            visibility: hidden;
+        }
+
+        .window {
+            width: 400px;
+            height: 300px;
+            background: #fff;
+            border-radius: 10px;
+            position: relative;
+            padding: 10px;
+            text-align: center;
+            margin: 15% auto;
+        }
+        .window h2 {
+            margin: 30px 0 0 0;
+        }
+
+        .close-button {
+            width: 6%;
+            height: 10%;
+            line-height: 23px;
+            background: black;
+            border-radius: 50%;
+            border: 3px solid #fff;
+            display: block;
+            text-align: center;
+            color: white;
+            font-weight: bold;
+            text-decoration: none;
+            position: absolute;
+            top: -10px;
+            right: -10px;	
+        }
+
+        .popup:target {
+            visibility: visible;
+        }
+
+        .btn1 {
+            width: 5%;
+            height: 8%;
+            margin-left: 50%;
+            margin-bottom: 10px;
+            padding: 10px;
+            font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+            text-transform: uppercase;
+            font-size: large;
+            border-radius: 10%;
+          }
+
+          .btn1:hover {
+            color: aquamarine;
+            background-color: blue;
+            border: 5px dotted aqua;
+          }
 
     </style>
   </head>
   <body>
     <div class="sidebar">
       <h2><u>Menu</u> :</h2>
+      <br/>
       <ul>
-        <li><a href="/trial">Play the Game</a></li>
         <li><a href="/">Back to Home</a></li>
+        <li><a href="/trial">Play the Game</a></li>
         <li><a href="/login">Log Out</a></li>
+        <br/>
+        <li><a href="/register">Delete Account</a></li>
       </ul>
     </div>
 
     <div class="content">
-      <h1>Welcome <%= user.username %></h1>
-    
-    </div>
+      <div class="wlcm">
+        <h1>Welcome <%= user.username %>,
+          <h5>Berikut Ini Data Profile Anda : </h5>
+        </h1>
+      </div>
+      
+      
+      <div class="container">
+      <table class="table">
+        <thead class="table-primary">
+        <tr>
+          <tr>
+            <th scope="col">Id User</th>
+            <td scope="row"><%= user.id %></td>
+          </tr>
+          <tr>
+            <th scope="col">Username</th>
+            <td scope="row"><%= user.username %></td>
+          </tr>
+          <tr> 
+            <th scope="col">Password</th>
+            <td scope="row"><%= user.password %></td>
+          </tr>
+          <tr> 
+              <th scope="col">First Name</th>
+              <td scope="row"><%= user.user_game_biodatum.first_name %></td>
+          </tr>
+            <th scope="col">Last Name</th>
+            <td scope="row"><%= user.user_game_biodatum.last_name %></td>
+          <tr> 
+            <th scope="col">Birth Place</th>
+            <td scope="row"><%= user.user_game_biodatum.birthplace %></td>
+          </tr>
+          <tr> 
+            <th scope="col">Action</th>
+            <td>
+              <div id="btn-edit" >
+              <a href="#popup/<%= user.id %>" >Edit  </a>
+              </div>
+            </td>
+          </tr>
+        </tr>
+        </thead>
+        <tbody class="table-secondary" >
+            <tr>
+          <div class="popup" id="popup/<%= user.id %>">
+            <div class="window">
+                <a href="#" class="close-button" title="Close">X</a>
+                <h3>Isilah data berikut ini :</h3>
+                <br/>
+                <form method="post" action="/profile/<%= user.id %>/edit">
+                    <label for="username">Username</label>
+                    <input type="text" id="editUsr" name="username" class="edit" value="<%= user.username %>">
+                    <br/>
+                    <label for="password">Password</label>
+                    <input type="text" id="editPsw" name="password" class="edit" value="<%= user.password %>">
+                    <br/>
+                    <label for="first_name">First Name</label>
+                    <input type="text" id="firstN" name="first_name" class="edit" value="<%= user.user_game_biodatum.first_name %>">
+                    <br/>
+                    <label for="last_name">Last Name</label>
+                    <input type="text" id="lastN" name="last_name" class="edit" value="<%= user.user_game_biodatum.last_name %>">
+                    <br/>
+                    <label for="birthplace">Birth Place</label>
+                    <input type="text" id="birthP" name="birthplace" class="edit" value="<%= user.user_game_biodatum.birthplace %>">
+                    <br/>
+                    <button onclick="saveUser()" type="submit" id="saveUsr" class="btn btn-success">Save</button> 
+                </form> 
+            </div>
+        </div>
+      </tr>
+        </tbody>
+    </table>
+  </div>
+</div>
+<br/>
+<br/>
+<br/>
+<div>
+  <a class="btn1 btn-warning" href="/trial">Play The Game</a>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
+<!--   
+<script>
+    
+  function saveUser() {
+      document.getElementById("popup").style.display = "none";
+  }
+  </script> -->
 </html>
